crates/sentinel-driver/tests/snapshots/ui__c44_spawn_result_must_be_i64.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c44_spawn_result_must_be_i64.sentinel\")"
---
sentinel::types::spawn_result_must_be_i64

  × `spawn` target must return `i64` (got `bool`)
    ╭─[tests/ui/c44_spawn_result_must_be_i64.sentinel:12:11]
 11 │ fn main() -> i64 {
 12 │     spawn flag();
    ·           ───┬──
    ·              ╰── 
 13 │     0
    ╰────
