crates/sentinel-driver/tests/snapshots/ui__c52_secret_array_index.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_array_index.sentinel\")"
---
sentinel::types::index_not_int

  × array index must be `i64`, got `<secret#0>`
   ╭─[tests/ui/c52_secret_array_index.sentinel:8:7]
 7 │     let s: secret i64 = 1;
 8 │     a[s]
   ·       ┬
   ·       ╰── 
 9 │ }
   ╰────
