crates/sentinel-driver/tests/snapshots/ui__c52_secret_divisor.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_divisor.sentinel\")"
---
sentinel::types::secret_divisor

  × variable-time division by a `secret` value leaks via timing
    ╭─[tests/ui/c52_secret_divisor.sentinel:9:20]
  8 │     let b: secret i64 = 5;
  9 │     declassify(a / b)
    ·                    ┬
    ·                    ╰── 
 10 │ }
    ╰────
