crates/sentinel-driver/tests/snapshots/ui__c52_secret_in_if.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_in_if.sentinel\")"
---
sentinel::types::secret_branch

  × `if` on a `secret bool` condition would leak via timing
    ╭─[tests/ui/c52_secret_in_if.sentinel:9:8]
  8 │     let s: secret bool = true;
  9 │     if s {
    ·        ┬
    ·        ╰── 
 10 │         1
    ╰────
