crates/sentinel-driver/tests/snapshots/ui__c52_secret_in_while.snap
---
source: crates/sentinel-driver/tests/ui.rs
assertion_line: 134
expression: "reject_stderr(\"c52_secret_in_while.sentinel\")"
---
sentinel::types::secret_branch

  × `while` on a `secret bool` condition would leak via timing
    ╭─[tests/ui/c52_secret_in_while.sentinel:9:11]
  8 │     let s: secret bool = true;
  9 │     while s {
    ·           ┬
    ·           ╰── 
 10 │     }
    ╰────
