crates/sentinel-driver/tests/snapshots/ui__c52_secret_or_leak.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_or_leak.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
   ╭─[tests/ui/c52_secret_or_leak.sentinel:7:5]
 6 │ fn leaky(a: secret bool, b: secret bool) -> secret bool {
 7 │     a || b
   ·     ┬
   ·     ╰── secret value reaches the sink here
 8 │ }
   ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
