crates/sentinel-driver/tests/snapshots/ui__c52_secret_via_class_init.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_via_class_init.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
    ╭─[tests/ui/c52_secret_via_class_init.sentinel:11:30]
 10 │     pub init(a: secret bool, b: secret bool) {
 11 │         let t: secret bool = idb(a) && b;
    ·                              ───┬──
    ·                                 ╰── secret value reaches the sink here
 12 │         self.n = 1;
    ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
